--- a/Traversal/Traversal/Traversal.csproj
+++ b/Traversal/Traversal/Traversal.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Folder Include="Areas\Member\Data\" />
     <Folder Include="Areas\Member\Models\" />
+    <Folder Include="wwwroot\UserImages\" />
   </ItemGroup>
 
 </Project>
